[package]
name = "philiprehberger-changelog"
version = "0.1.0"
edition = "2021"
authors = ["Philip Rehberger"]
description = "Programmatic CHANGELOG.md parsing, generation, and manipulation following Keep a Changelog format"
license = "MIT"
repository = "https://github.com/philiprehberger/rs-changelog"
keywords = ["changelog", "release", "markdown", "versioning", "keep-a-changelog"]
categories = ["development-tools", "text-processing"]
